@@ -5,8 +5,9 @@
    * scripts/test_scripts.py: remove test_interleave_reads_broken_fq_4 for
    only one input file for interleave-reads.py.
    * scripts/split-paired-reads.py: fix print statement; clarify output.
-   * scripts/{normalize-by-median.py,sample-reads-randomly.py}: if stdin is
-   supplied for input, check that -o specifies output file.
+   * scripts/{normalize-by-median.py,sample-reads-randomly.py,
+   trim-low-abund.py}: if stdin is supplied for input, check that -o
+   specifies output file.
    * scripts/filter-abund.py: if stdin is supplied for input, check that -o
    specifies output file; switched -o to use argparse.FileType.
    * scripts/extract-long-sequences.py: switched -o to use argparse.FileType.
